<resources>
    <string name="app_name">To Do List</string>
    <string name="todolist">TODOLIST</string>
    <string name="title">Title</string>
    <string name="contenet">Contenet</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="txt_list_item">Title:\nContent:\nDate:</string>
    <string name="cancel">cancel</string>
</resources>