<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/title"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/txt_up_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/contenet"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/txt_up_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:textSize="@dimen/text_size"
        android:textStyle="italic"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/date"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/txt_up_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:textSize="@dimen/text_size"
        android:textStyle="italic"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/type"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/txt_up_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:inputType="none"
        android:text="Dễ"
        android:textSize="@dimen/text_size"
        android:textStyle="italic"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_up_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/update"
            android:textSize="@dimen/btn_size"
            android:textColor="@color/black"
            android:textAllCaps="true"
            android:background="@drawable/custom_btn2"/>
        <Button
            android:id="@+id/btn_up_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/cancel"
            android:textSize="@dimen/btn_size"
            android:textColor="@color/black"
            android:textAllCaps="true"
            android:background="@drawable/custom_btn3"/>
    </LinearLayout>

</LinearLayout>